Added Html structure

--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Portfolio</title>
 </head>
 <body>
-    
+    <!-- Nav section -->
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Projects</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+    <!-- Main Page-->
+    <main>
+        <!-- Hero Section  -->
+        <section class="landing-section">
+
+        </section>
+        <!-- Services Section  -->
+        <section class="services">
+
+        </section>
+        <!-- Projects Section  -->
+        <section class="projects">
+
+        </section>
+        <footer>
+
+        </footer>
+    </main>
 </body>
 </html>
