Added Html content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+
     <title>Portfolio</title>
 </head>
 <body>
@@ -19,19 +21,73 @@
     <main>
         <!-- Hero Section  -->
         <section class="landing-section">
-
+            <div class="text-container">
+                <h2>Chris Ruto</h2>
+                <h3>Web Developer</h3>
+                <hr>
+                <p>
+                    I am a seasoned web developer with over
+                    5 years of experience, specializing in front-end
+                    and back-end development, and a passion for
+                    creating seamless and visually captivating
+                    online experiences.
+                </p>
+            </div>
+            <div class="img-container">
+                <img src="./img/profilepic.png" alt="Profile">
+            </div>
         </section>
+
         <!-- Services Section  -->
         <section class="services">
-
+            <h2>Services Offered</h2>
+            <div class="card-container">
+                <div class="card">
+                    <i class="fa-solid fa-code"></i>
+                    <p>
+                        I'm a website developer dedicated to
+                        creating engaging online experiences
+                        that blend aesthetics with functionality for
+                        memorable user interactions.
+                    </p>
+                </div>
+                <div class="card">
+                    <i class="fa-solid fa-pen-nib"></i>
+                    <p>
+                        Offering top-notch graphic design service
+                        tailored to your unique needs, ensuring
+                        visually stunning and impactful results for
+                        your brand.
+                    </p>
+                </div>
+            </div>
         </section>
         <!-- Projects Section  -->
         <section class="projects">
+            <h2>Projects</h2>
+            <div class="projects-container">
+                <div class="proj1"></div>
+                <div class="proj2"></div>
+                <div class="proj3"></div>
+            </div>
+        </section>
 
+        <!-- Contact Section  -->
+        <section class="contact-container">
+            <div class="img-container">
+
+            </div>
+            <div class="form-contact">
+                <h3>Reach Out</h3>
+                <div class="form">
+        
+                </div>
+            </div>
         </section>
         <footer>
 
         </footer>
     </main>
+    <script src="https://kit.fontawesome.com/c8c4bf39cb.js" crossorigin="anonymous"></script>
 </body>
 </html>
