Added img folder, landing and services css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
     <title>Portfolio</title>
@@ -11,7 +15,7 @@
 <body>
     <!-- Nav section -->
     <nav>
-        <ul>
+        <ul class="links">
             <li>Home</li>
             <li>Projects</li>
             <li>Contact</li>
@@ -40,7 +44,7 @@
 
         <!-- Services Section  -->
         <section class="services">
-            <h2>Services Offered</h2>
+            <h3>Services Offered</h3>
             <div class="card-container">
                 <div class="card">
                     <i class="fa-solid fa-code"></i>
@@ -64,7 +68,7 @@
         </section>
         <!-- Projects Section  -->
         <section class="projects">
-            <h2>Projects</h2>
+            <h3>Projects</h3>
             <div class="projects-container">
                 <div class="proj1"></div>
                 <div class="proj2"></div>
@@ -88,6 +92,7 @@
 
         </footer>
     </main>
+    <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/c8c4bf39cb.js" crossorigin="anonymous"></script>
 </body>
 </html>
