--- a/index.html
+++ b/index.html
@@ -74,18 +74,25 @@
                 <div class="proj2"></div>
                 <div class="proj3"></div>
             </div>
+            <p>View More</p>
         </section>
 
         <!-- Contact Section  -->
         <section class="contact-container">
             <div class="img-container">
-
+                <img src="./img/Phone.png" alt="" srcset="">
             </div>
             <div class="form-contact">
                 <h3>Reach Out</h3>
-                <div class="form">
-        
-                </div>
+                <form action="submit_form.php" method="post">
+                    <label for="name">Name:</label><br>
+                    <input type="text" id="name" name="name"><br>
+                    <label for="email">Email address:</label><br>
+                    <input type="email" id="email" name="email"><br>
+                    <label for="message">Message:</label><br>
+                    <textarea id="message" name="message"></textarea><br><br>
+                    <input type="submit" value="Submit">
+                </form> 
             </div>
         </section>
         <footer>
