--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
             <div class="form-contact">
                 <h3>Reach Out</h3>
                 <form action="submit_form.php" method="post">
-                    <label for="name">Name:</label><br>
-                    <input type="text" id="name" name="name"><br>
-                    <label for="email">Email address:</label><br>
-                    <input type="email" id="email" name="email"><br>
-                    <label for="message">Message:</label><br>
-                    <textarea id="message" name="message"></textarea><br><br>
+                   <!-- <label for="name" ">Name:</label><br> --> 
+                    <input type="text" id="name" name="name" placeholder="Name"><br>
+                    <!-- <label for="email">Email address:</label><br> --> 
+                    <input type="email" id="email" name="email" placeholder="Email Address"><br>
+                    <!-- <label for="message">Message:</label><br> --> 
+                    <textarea id="message" name="message" placeholder="Message"></textarea><br><br>
                     <input type="submit" value="Submit">
                 </form> 
             </div>
