Added footer content

--- a/index.html
+++ b/index.html
@@ -90,15 +90,28 @@
                     <!-- <label for="email">Email address:</label><br> --> 
                     <input type="email" id="email" name="email" placeholder="Email Address"><br>
                     <!-- <label for="message">Message:</label><br> --> 
-                    <textarea id="message" name="message" placeholder="Message"></textarea><br><br>
-                    <input type="submit" value="Submit">
+                    <textarea id="message" name="message" placeholder="Message"></textarea><br>
+                    <input type="submit" value="Submit" class="submit">
                 </form> 
             </div>
         </section>
-        <footer>
-
-        </footer>
     </main>
+    <footer>
+        <h3>Contact Details</h3>
+        <div class="contacts">
+            <div class="phone">
+                <i class="fa-solid fa-phone" style="color: #ffffff;"></i>
+                +275 701 957 617
+            </div>
+            <div class="email">
+                <i class="fa-solid fa-envelope" style="color: #ffffff;"></i>
+                chrisruto.k@gmail.com
+            </div>
+        </div>
+        <hr>
+        <p>Developed by Chris Ruto &copyCopyrights2023</p>
+    </footer>
+    
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/c8c4bf39cb.js" crossorigin="anonymous"></script>
 </body>
