--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <section class="projects">
             <h3>Projects</h3>
             <div class="projects-container">
-                <div class="proj1"></div>
-                <div class="proj2"></div>
-                <div class="proj3"></div>
+                <div id="proj" class="proj1"></div>
+                <div id="proj" class="proj2"></div>
+                <div id="proj" class="proj3"></div>
             </div>
             <p>View More</p>
         </section>
