Changed sections from class to id

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <ul class="links">
             <li>Home</li>
             <li>Projects</li>
-            <li>Contact</li>
+            <li> Contact</li>
         </ul>
     </nav>
     <!-- Main Page-->
     <main>
         <!-- Hero Section  -->
-        <section class="landing-section">
+        <section id="landing-section">
             <div class="text-container">
                 <h2>Chris Ruto</h2>
                 <h3>Web Developer</h3>
@@ -67,7 +67,7 @@
             </div>
         </section>
         <!-- Projects Section  -->
-        <section class="projects">
+        <section id="projects">
             <h3>Projects</h3>
             <div class="projects-container">
                 <div id="proj" class="proj1"></div>
@@ -78,7 +78,7 @@
         </section>
 
         <!-- Contact Section  -->
-        <section class="contact-container">
+        <section id="contact-container">
             <div class="img-container">
                 <img src="./img/Phone.png" alt="" srcset="">
             </div>
