--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <!-- Nav section -->
     <nav>
         <ul class="links">
-            <li>Home</li>
-            <li>Projects</li>
-            <li> Contact</li>
+            <li><a href="#landing-section">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact-container">Contact</a></li>
         </ul>
     </nav>
     <!-- Main Page-->
