--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                 <h3>Web Developer</h3>
                 <hr>
                 <p>
-                    I am a seasoned web developer with over
-                    5 years of experience, specializing in front-end
+                    I am a seasoned web developer specializing in front-end
                     and back-end development, and a passion for
                     creating seamless and visually captivating
                     online experiences.
