--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
             </div>
             <div class="img-container">
-                <img src="./img/profilepic.png" alt="Profile">
+                <img src="./img/dev5-removebg.png" alt="Profile">
             </div>
         </section>
 
