Added transition effect and changed website color

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
             </div>
             <div class="img-container">
-                <img src="./img/dev5-removebg.png" alt="Profile">
+                <img src="./img/frame2.png" alt="Profile">
             </div>
         </section>
 
@@ -79,8 +79,10 @@
 
         <!-- Contact Section  -->
         <section id="contact-container">
+            
             <div class="img-container">
-                <img src="./img/Phone.png" alt="" srcset="">
+                <h3>Reach Out</h3>
+                <img src="./img/contact3-removebg.png" alt="" srcset="">
             </div>
             <div class="form-contact">
                 <h3>Reach Out</h3>
