Changed text on cards

--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
                 <div class="card">
                     <i class="fa-solid fa-code"></i>
                     <p>
-                        I'm a website developer dedicated to
-                        creating engaging online experiences
-                        that blend aesthetics with functionality for
-                        memorable user interactions.
+                        Delivering top-tier web development services customized to
+                        your specific requirements, guaranteeing
+                        influential results for your online presence.
                     </p>
                 </div>
                 <div class="card">
